bluejay-validator/tests/snapshots/executable_integration_test__error@required_arguments.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/required_arguments.graphql
---
Error: Field `nonNullBooleanArgField` missing argument(s): nonNullBooleanArg
   ╭─[ required_arguments.graphql:3:5 ]
   │
 3 │     nonNullBooleanArgField
   │     ───────────┬──────────  
   │                ╰──────────── Missing argument(s): nonNullBooleanArg
───╯

Error: Got null when non-null value of type Boolean! was expected
   ╭─[ required_arguments.graphql:9:47 ]
   │
 9 │     nonNullBooleanArgField(nonNullBooleanArg: null)
   │                                               ──┬─  
   │                                                 ╰─── Expected non-null value
───╯
